# USUPACR

./: MSG  README.md  notes.txt
Arduino_Sandbox/Motor_Test/: Motor_Test.ino
Arduino_Sandbox/Simple_Serial_Test/: Simple_Serial_Test.ino
GUI/: CMakeLists.txt  GUI code.cpp  mainwindow.cpp  mainwindow.h  pacr-gui.cbp  pacr-gui.cpp  pacr-gui.layout
OPENCV_Sandbox/: .Tracking_matching_Dual-camera.cpp.swp  .main.cpp.swp  CMakeLists.txt  OPENCV_Sandbox.cbp  OPENCV_Sandbox.depend  OPENCV_Sandbox.layout  Tracking_matching_Dual-camera.cpp  main.cpp  tracking.cpp
TEST_GUI/: pacr-gui.cpp
TEST_detectnet-camera/: CMakeLists.txt
TEST_detectnet-camera-opencv/: CMakeLists.txt
TEST_distance-and-detection/: det_dist.cpp  det_dist_backup.cpp
TEST_follow-demo/: pacr-follow.cpp  pacr-follow.layout
TEST_pacr-manual/: CMakeLists.txt  arduinoCode.cpp  motorArduino_withAuton.cpp  pacr-manual.cbp  pacr-manual.cpp  pacr-manual.layout
USUPACR/: CMakeLists.txt  CMakeLists_old.txt  USUPACR.cbp  USUPACR.depend  USUPACR.layout  main.cpp  main.h
USUPACR/Arduino_motors/arduino_for_estop/: arduino_for_estop.ino
USUPACR/Arduino_motors/arduino_for_motors/: arduino_for_motors.ino
USUPACR/Arduino_motors/arduino_for_motors_noBrakes/: arduino_for_motors_backup.ino  arduino_for_motors_noBrakes.ino
USUPACR/Old files/include/: cameraDetection.h
USUPACR/Old files/src/: XBoxOne.cpp
USUPACR/include/: XBoxOne.h  cameraDetection.h  mainwindow.h
USUPACR/src/: XBoxOne.cpp  cameraDetection.cpp  mainwindow.cpp
Wormy-XBox/: wormyxBox.py  xboxOne.py
detectnet-camera/: CMakeLists.txt  CMakeLists_OLD.txt  detectnet-camera-opencv.cpp  detectnet-camera.cpp
detectnet-camera-opencv/: detectnet-camera-opencv.cpp
distance-and-detection/: CMakeLists.txt  det_dist.cpp  detectnet-distance.cpp
follow-demo/: CMakeLists.txt  pacr-follow-backup.cpp  pacr-follow.cbp  pacr-follow.cpp  pacr-follow.depend  pacr-follow.layout
follow-demo/include/: XBoxOne.h  cameraDetection.h  hi.h
follow-demo/src/: XBoxOne.cpp  cameraDetection.cpp  hi.cpp
include/: XBoxOne.h  cameraDetection.h  mainwindow.h  motorController.h  pacrControl.h  personTracker.h  stopwatch.h
motorArduino/arduino_for_motors_withAuton/: arduino_for_motors_withAuton.ino
realsense_playground/: CMakeLists.txt  rs-measure.cpp  rs-playground.cpp
src/: XBoxOne.cpp  cameraDetection.cpp  mainwindow.cpp  motorController.cpp  pacrControl.cpp  personTracker.cpp  stopwatch.cpp
